--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Roboto&family=Tektur&display=swap" rel="stylesheet">
         <title>will.wey</title>
     </head>
-    <body style="background-color: black; display: flex; align-items: center; justify-content: center; height: 100vh; align-content: center; justify-items: center; flex-direction: column;">
-        <h1 class="coverText">Coming soon.</h1>
-        <h3 style="font-size: 28px;">Will Andrews &bull; Seth Wey</h3>
-        <h3>2023-2024 Student Government</h3>
+    <body style="background-color:hsl(220 20% 20%);">
+        <header style="display:flex; justify-content:center">
+            <h3 class="headerText" style="margin:16px">Will Andrews &bull; Seth Wey</h3>
+        </header>
+        <main>
+            <section class="centeredSection grid1">
+                <div style="padding:32px">
+                    <h1 class="coverText">Where there's a <span class="coverTextEmphasis">Will,</span> there's a <span class="coverTextEmphasis">Wey.</span></h1>
+                    <div style="height:32px"></div>
+                    <div style="display:flex;justify-content:center">
+                        <img class="image2" src="media/mainPhoto.jpg"/>
+                    </div>
+                    <div style="height:32px"></div>
+                    <div style="display:flex;align-items:end">
+                        <h3>Instagram</h3>
+                        <h4 class="wide insta" style="margin-left:auto"><a href="https://instagram.com/will.weystugov/">will.weystugov</a></h4>
+                    </div>
+                    <div style="height:3px;background-color:white"></div>
+                    <h4 class="narrow insta" style="margin-left:auto"><a href="https://instagram.com/will.weystugov/">will.weystugov</a></h4>
+                    <div style="height:16px"></div>
+                    <div style="display:flex;align-items:end">
+                        <h3>Contact</h3>
+                        <h4 class="wide email" style="margin-left:auto"><a href="mailto:s1805914@online.houstonisd.org">s1805914@online.houstonisd.org</a></h4>
+                    </div>
+                    <div style="height:3px;background-color:white"></div>
+                    <h4 class="narrow email" style="margin-left:auto"><a href="mailto:s1805914@online.houstonisd.org">s1805914@online.houstonisd.org</a></h4>
+                </div>
+                <img class="image1" src="media/mainPhoto.jpg" style="width:500px"/>
+            </section>
+        </main>
     </body>
 </html>
